--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4"
+    "bluebird": "^3.3.5",
+    "express": "^4.13.4",
+    "mysql": "^2.10.2"
   }
 }
