--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.3.5",
+    "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "mysql": "^2.10.2"
   }
