--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
-    "mysql": "^2.10.2"
+    "mysql": "^2.10.2",
+    "sequelize": "^3.23.4",
+    "sequelize-cli": "^2.4.0"
   }
 }
